[gd_scene load_steps=17 format=2]

[ext_resource path="res://bullet.gd" type="Script" id=1]
[ext_resource path="res://GFX/fire particle.png" type="Texture" id=2]
[ext_resource path="res://GFX/ground.PNG" type="Texture" id=3]

[sub_resource type="ParticlesMaterial" id=1]
initial_velocity = 10.0
angular_velocity_random = 0.88
scale = 2.0

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 2
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=2]
material = SubResource( 6 )
size = Vector2( 2, 2 )

[sub_resource type="CapsuleMesh" id=3]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.298039, 0.298039, 0.298039, 1 )

[sub_resource type="CapsuleShape" id=4]
height = 2.97301

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3( 0, 1, 0 )
initial_velocity = 40.0
initial_velocity_random = 1.0
angular_velocity = 3.0
angular_velocity_random = 1.0
tangential_accel = 2.0
scale_random = 0.1

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 1, 1, 0.862745 )
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=9]
material = SubResource( 8 )
size = Vector2( 3, 3 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3( 0, 1, 0 )
spread = 61.04
initial_velocity = 15.0
initial_velocity_random = 0.2
linear_accel = -3.02
radial_accel = 3.0
radial_accel_random = 1.0
scale = 5.0
scale_random = 1.0

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=12]
material = SubResource( 11 )

[sub_resource type="SphereShape" id=14]
radius = 16.4578

[node name="Bullet" type="KinematicBody"]
script = ExtResource( 1 )

[node name="trail" type="Particles" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -4 )
emitting = false
amount = 60
lifetime = 0.6
visibility_aabb = AABB( -2.58198, -4, -2.37997, 5.16396, 8, 4.75993 )
process_material = SubResource( 1 )
draw_pass_1 = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.999998, -0.00150508, 0.000937784, 0.00150585, 0.999999, -0.000821736, -0.000936547, 0.000823144, 0.999999, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 5 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 4 )

[node name="impact" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.44086, 0 )
emitting = false
amount = 60
lifetime = 2.0
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 9 )

[node name="impactTimer" type="Timer" parent="impact"]
wait_time = 0.2
one_shot = true

[node name="explosion" type="Particles" parent="."]
emitting = false
amount = 200
lifetime = 1.5
speed_scale = 2.0
process_material = SubResource( 13 )
draw_pass_1 = SubResource( 12 )

[node name="timeToExplode" type="Timer" parent="explosion"]
wait_time = 0.001
one_shot = true

[node name="explosionTime" type="Timer" parent="explosion"]
wait_time = 0.5
one_shot = true

[node name="impactArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="impactArea"]
shape = SubResource( 14 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="impact/impactTimer" to="." method="_on_impactTimer_timeout"]
[connection signal="timeout" from="explosion/timeToExplode" to="." method="_on_timeToExplode_timeout"]
[connection signal="timeout" from="explosion/explosionTime" to="." method="_on_explosionTime_timeout"]
